Fixed hero section on mobile and tablet

--- a/src/scss/abstracts/colors.scss
+++ b/src/scss/abstracts/colors.scss
@@ -1,8 +1,9 @@
-$background-color: #f5f5f5;
-$dominant-color: #16181c;
-$highlight-color: #eba838;
-$compliment-color: #6b6b6b;
+$background-color: #f2f2f2;
+$dominant-color: #262626;
+$highlight-color: #d2ac6a;
+$compliment-color: #626262;
 $faded-color: #d9d9d9;
+$surface-color: #f4f4f4;
 
 h1,
 h3 {
@@ -33,4 +34,8 @@ cite {
 
 hr {
   border-color: $faded-color;
+}
+
+.retreat-card {
+  background-color: $surface-color;
 }
