--- a/src/scss/abstracts/fonts.scss
+++ b/src/scss/abstracts/fonts.scss
@@ -1,18 +1,18 @@
-@import url("https://fonts.googleapis.com/css2?family=ABeeZee:ital@0;1&family=Montserrat:ital,wght@0,500;1,400;1,600&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,500;1,400;1,600&family=Raleway:wght@500;700&display=swap");
 
-$font-montserrat: "Montserrat", sans-serif;
+$font-headings: "Raleway", sans-serif;
 $font-abeezee: "ABeeZee", sans-serif;
 
 h1,
 h3,
 h4 {
   // display: flex;
-  font-family: $font-montserrat;
+  font-family: $font-headings;
   font-weight: 500;
 }
 
 h1 {
-  font-size: 2.5rem;
+  font-size: 2rem;
   @media only screen and (min-width: 700px) {
     font-size: 4rem;
   }
@@ -41,7 +41,7 @@ p {
 }
 
 a {
-  font-family: $font-montserrat;
+  font-family: $font-headings;
   font-weight: 500;
   text-decoration: none;
 }
@@ -52,7 +52,7 @@ blockquote {
 }
 
 cite {
-  font-family: $font-montserrat;
+  font-family: $font-headings;
   font-weight: 600;
 }
 
