--- a/src/scss/abstracts/shadow.scss
+++ b/src/scss/abstracts/shadow.scss
@@ -1,3 +1,6 @@
 .shadow {
-  filter: drop-shadow(0px 8px 16px rgba(37, 37, 38, 0.2));
+  box-shadow: 0 16px 32px rgba(69, 69, 69, 0.15);
+  @media only screen and (min-width: 1200) {
+    box-shadow: -16px 16px 32px rgba(69, 69, 69, 0.1);
+  }
 }
