--- a/src/scss/base/base.scss
+++ b/src/scss/base/base.scss
@@ -7,7 +7,6 @@ body {
 
 section {
   overflow: hidden;
-  padding-block: 3rem;
   padding-inline: 1.375rem;
   @media only screen and (min-width: 768px) {
     padding-inline: 2.375rem;
