--- a/src/scss/components/card.scss
+++ b/src/scss/components/card.scss
@@ -1,5 +1,4 @@
 .retreat-card {
-  background-color: #fff;
   width: 100%;
 
   & img {
