--- a/src/scss/pages/home.scss
+++ b/src/scss/pages/home.scss
@@ -1,5 +1,5 @@
 #hero {
-  height: 90vh;
+  height: 88vh;
   width: 100%;
   display: flex;
   flex-direction: column;
